--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
     "axios": "^1.7.9",
+    "framer-motion": "^12.9.1",
+    "lucide-react": "^0.503.0",
     "motion": "^12.4.1",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
